fix 3d transitions on ie10

--- a/src/style/scss/_indexPanel.scss
+++ b/src/style/scss/_indexPanel.scss
@@ -39,12 +39,13 @@
 
 .iapp-clip-index {
     background-color: black;
-    overflow-y: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .iapp-people-index {
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .iapp-clip-index-item {
